Remove deprecated function calls